# quick_cmake_sdl_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  install_sdl.ps1
src/: main.cpp
